fix bad wrapping in matrix

--- a/assets/lernmarktplatz.less
+++ b/assets/lernmarktplatz.less
@@ -124,6 +124,7 @@ article.contentbox {
         font-size: 1.2em;
         padding: 5px;
         min-height: 2.5em;
+        white-space: nowrap;
     }
 }
 
